--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.15.1
   firebase_auth: ^4.9.0
   provider: ^6.0.5
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
