--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.9.0
   provider: ^6.0.5
   http: ^1.1.0
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
