--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   provider: ^6.0.5
   http: ^1.1.0
   flutter_spinkit: ^5.2.0
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_test:
