--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,16 @@ dependencies:
   http: ^1.1.0
   flutter_spinkit: ^5.2.0
   youtube_player_flutter: ^8.1.2
+  flutter_native_splash: ^2.3.2
+
+flutter_native_splash:
+  android:  true
+  ios:  true
+  web:  false
+  android_12:
+    image: images/background.png
+  color: "#ffffff"
+  image: images/background.png
 
 dev_dependencies:
   flutter_test:
